// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiTypes should have specific API properties: all exported api types 1`] = `
Object {
  "apiTypes": Object {
    "rhsmApi": Object {
      "RHSM_API_PATH_ID_TYPES": Object {
        "OPENSHIFT": "OpenShift Container Platform",
        "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
        "OPENSHIFT_METRICS": "OpenShift-metrics",
        "RHEL": "RHEL",
        "RHEL_ARM": "RHEL for ARM",
        "RHEL_COMPUTE_NODE": "RHEL Compute Node",
        "RHEL_DESKTOP": "RHEL Desktop",
        "RHEL_IBM_POWER": "RHEL for IBM Power",
        "RHEL_IBM_Z": "RHEL for IBM z",
        "RHEL_SERVER": "RHEL Server",
        "RHEL_WORKSTATION": "RHEL Workstation",
        "RHEL_X86": "RHEL for x86",
        "RHOSAK": "rhosak",
        "SATELLITE": "Satellite",
        "SATELLITE_CAPSULE": "Satellite Capsule",
        "SATELLITE_SERVER": "Satellite Server",
      },
      "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
        "DAILY": "Daily",
        "MONTHLY": "Monthly",
        "QUARTERLY": "Quarterly",
        "WEEKLY": "Weekly",
      },
      "RHSM_API_QUERY_SET_INVENTORY_GUESTS_TYPES": Object {
        "BILLING_ACCOUNT_ID": "billing_account_id",
        "BILLING_PROVIDER": "billing_provider",
        "DIRECTION": "dir",
        "DISPLAY_NAME": "display_name_contains",
        "END_DATE": "ending",
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "SORT": "sort",
        "START_DATE": "beginning",
        "UOM": "uom",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SET_INVENTORY_SUBSCRIPTIONS_TYPES": Object {
        "BILLING_ACCOUNT_ID": "billing_account_id",
        "BILLING_PROVIDER": "billing_provider",
        "DIRECTION": "dir",
        "DISPLAY_NAME": "display_name_contains",
        "END_DATE": "ending",
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "SORT": "sort",
        "START_DATE": "beginning",
        "UOM": "uom",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SET_INVENTORY_TYPES": Object {
        "BILLING_ACCOUNT_ID": "billing_account_id",
        "BILLING_PROVIDER": "billing_provider",
        "DIRECTION": "dir",
        "DISPLAY_NAME": "display_name_contains",
        "END_DATE": "ending",
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "SORT": "sort",
        "START_DATE": "beginning",
        "UOM": "uom",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SET_OPTIN_TYPES": Object {
        "CONDUIT_SYNC": "enable_conduit_sync",
        "TALLY_REPORT": "enable_tally_reporting",
        "TALLY_SYNC": "enable_tally_sync",
      },
      "RHSM_API_QUERY_SET_REPORT_CAPACITY_TYPES": Object {
        "BILLING_PROVIDER": "billing_provider",
        "END_DATE": "ending",
        "GRANULARITY": "granularity",
        "SLA": "sla",
        "START_DATE": "beginning",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SLA_TYPES": Object {
        "NONE": "",
        "PREMIUM": "Premium",
        "SELF": "Self-Support",
        "STANDARD": "Standard",
      },
      "RHSM_API_QUERY_SORT_DIRECTION_TYPES": Object {
        "ASCENDING": "asc",
        "DESCENDING": "desc",
      },
      "RHSM_API_QUERY_SORT_TYPES": Object {
        "CORES": "cores",
        "CORE_HOURS": "core_hours",
        "HARDWARE": "hardware_type",
        "INSTANCE_HOURS": "instance_hours",
        "LAST_SEEN": "last_seen",
        "MEASUREMENT": "measurement_type",
        "NAME": "display_name",
        "SOCKETS": "sockets",
      },
      "RHSM_API_QUERY_TYPES": Object {
        "BILLING_ACCOUNT_ID": "billing_account_id",
        "BILLING_PROVIDER": "billing_provider",
        "CONDUIT_SYNC": "enable_conduit_sync",
        "DIRECTION": "dir",
        "DISPLAY_NAME": "display_name_contains",
        "END_DATE": "ending",
        "GRANULARITY": "granularity",
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "SORT": "sort",
        "START_DATE": "beginning",
        "TALLY_REPORT": "enable_tally_reporting",
        "TALLY_SYNC": "enable_tally_sync",
        "UOM": "uom",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_UOM_TYPES": Object {
        "CORES": "cores",
        "SOCKETS": "sockets",
      },
      "RHSM_API_QUERY_USAGE_TYPES": Object {
        "DEVELOPMENT": "Development/Test",
        "DISASTER": "Disaster Recovery",
        "PRODUCTION": "Production",
        "UNSPECIFIED": "",
      },
      "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
      "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
        "CLOUD_CORES": "cloud_cores",
        "CLOUD_INSTANCES": "cloud_instance_count",
        "CLOUD_SOCKETS": "cloud_sockets",
        "CORES": "cores",
        "DATE": "date",
        "HAS_INFINITE": "has_infinite_quantity",
        "HYPERVISOR_CORES": "hypervisor_cores",
        "HYPERVISOR_SOCKETS": "hypervisor_sockets",
        "PHYSICAL_CORES": "physical_cores",
        "PHYSICAL_SOCKETS": "physical_sockets",
        "SOCKETS": "sockets",
      },
      "RHSM_API_RESPONSE_DATA": "data",
      "RHSM_API_RESPONSE_ERROR_DATA": "errors",
      "RHSM_API_RESPONSE_ERROR_DATA_CODE_TYPES": Object {
        "GENERIC": "SUBSCRIPTIONS1003",
        "OPTIN": "SUBSCRIPTIONS1004",
      },
      "RHSM_API_RESPONSE_ERROR_DATA_TYPES": Object {
        "CODE": "code",
      },
      "RHSM_API_RESPONSE_INVENTORY_DATA": "data",
      "RHSM_API_RESPONSE_INVENTORY_DATA_TYPES": Object {
        "CLOUD_PROVIDER": "cloud_provider",
        "CORES": "cores",
        "CORE_HOURS": "core_hours",
        "GUESTS": "number_of_guests",
        "HARDWARE": "hardware_type",
        "ID": "insights_id",
        "INVENTORY_ID": "inventory_id",
        "LAST_SEEN": "last_seen",
        "MEASUREMENT": "measurement_type",
        "NAME": "display_name",
        "SOCKETS": "sockets",
        "SUBSCRIPTION_ID": "subscription_manager_id",
      },
      "RHSM_API_RESPONSE_INVENTORY_GUESTS_DATA_TYPES": Object {
        "ID": "insights_id",
        "LAST_SEEN": "last_seen",
        "NAME": "display_name",
        "SUBSCRIPTION_ID": "subscription_manager_id",
      },
      "RHSM_API_RESPONSE_LINKS": "links",
      "RHSM_API_RESPONSE_LINKS_TYPES": Object {
        "FIRST": "first",
        "LAST": "last",
        "NEXT": "next",
        "PREVIOUS": "previous",
      },
      "RHSM_API_RESPONSE_META": "meta",
      "RHSM_API_RESPONSE_META_TYPES": Object {
        "COUNT": "count",
        "TOTAL_CORE_HOURS": "total_core_hours",
        "TOTAL_INSTANCE_HOURS": "total_instance_hours",
      },
      "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
      "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
        "CLOUD_CORES": "cloud_cores",
        "CLOUD_INSTANCES": "cloud_instance_count",
        "CLOUD_SOCKETS": "cloud_sockets",
        "CORES": "cores",
        "CORE_HOURS": "core_hours",
        "DATE": "date",
        "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
        "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
        "HAS_DATA": "has_data",
        "HYPERVISOR_CORES": "hypervisor_cores",
        "HYPERVISOR_SOCKETS": "hypervisor_sockets",
        "INSTANCE_HOURS": "instance_hours",
        "PHYSICAL_CORES": "physical_cores",
        "PHYSICAL_SOCKETS": "physical_sockets",
        "SOCKETS": "sockets",
      },
    },
  },
  "default": Object {
    "rhsmApi": Object {
      "RHSM_API_PATH_ID_TYPES": Object {
        "OPENSHIFT": "OpenShift Container Platform",
        "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
        "OPENSHIFT_METRICS": "OpenShift-metrics",
        "RHEL": "RHEL",
        "RHEL_ARM": "RHEL for ARM",
        "RHEL_COMPUTE_NODE": "RHEL Compute Node",
        "RHEL_DESKTOP": "RHEL Desktop",
        "RHEL_IBM_POWER": "RHEL for IBM Power",
        "RHEL_IBM_Z": "RHEL for IBM z",
        "RHEL_SERVER": "RHEL Server",
        "RHEL_WORKSTATION": "RHEL Workstation",
        "RHEL_X86": "RHEL for x86",
        "RHOSAK": "rhosak",
        "SATELLITE": "Satellite",
        "SATELLITE_CAPSULE": "Satellite Capsule",
        "SATELLITE_SERVER": "Satellite Server",
      },
      "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
        "DAILY": "Daily",
        "MONTHLY": "Monthly",
        "QUARTERLY": "Quarterly",
        "WEEKLY": "Weekly",
      },
      "RHSM_API_QUERY_SET_INVENTORY_GUESTS_TYPES": Object {
        "BILLING_ACCOUNT_ID": "billing_account_id",
        "BILLING_PROVIDER": "billing_provider",
        "DIRECTION": "dir",
        "DISPLAY_NAME": "display_name_contains",
        "END_DATE": "ending",
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "SORT": "sort",
        "START_DATE": "beginning",
        "UOM": "uom",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SET_INVENTORY_SUBSCRIPTIONS_TYPES": Object {
        "BILLING_ACCOUNT_ID": "billing_account_id",
        "BILLING_PROVIDER": "billing_provider",
        "DIRECTION": "dir",
        "DISPLAY_NAME": "display_name_contains",
        "END_DATE": "ending",
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "SORT": "sort",
        "START_DATE": "beginning",
        "UOM": "uom",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SET_INVENTORY_TYPES": Object {
        "BILLING_ACCOUNT_ID": "billing_account_id",
        "BILLING_PROVIDER": "billing_provider",
        "DIRECTION": "dir",
        "DISPLAY_NAME": "display_name_contains",
        "END_DATE": "ending",
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "SORT": "sort",
        "START_DATE": "beginning",
        "UOM": "uom",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SET_OPTIN_TYPES": Object {
        "CONDUIT_SYNC": "enable_conduit_sync",
        "TALLY_REPORT": "enable_tally_reporting",
        "TALLY_SYNC": "enable_tally_sync",
      },
      "RHSM_API_QUERY_SET_REPORT_CAPACITY_TYPES": Object {
        "BILLING_PROVIDER": "billing_provider",
        "END_DATE": "ending",
        "GRANULARITY": "granularity",
        "SLA": "sla",
        "START_DATE": "beginning",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SLA_TYPES": Object {
        "NONE": "",
        "PREMIUM": "Premium",
        "SELF": "Self-Support",
        "STANDARD": "Standard",
      },
      "RHSM_API_QUERY_SORT_DIRECTION_TYPES": Object {
        "ASCENDING": "asc",
        "DESCENDING": "desc",
      },
      "RHSM_API_QUERY_SORT_TYPES": Object {
        "CORES": "cores",
        "CORE_HOURS": "core_hours",
        "HARDWARE": "hardware_type",
        "INSTANCE_HOURS": "instance_hours",
        "LAST_SEEN": "last_seen",
        "MEASUREMENT": "measurement_type",
        "NAME": "display_name",
        "SOCKETS": "sockets",
      },
      "RHSM_API_QUERY_TYPES": Object {
        "BILLING_ACCOUNT_ID": "billing_account_id",
        "BILLING_PROVIDER": "billing_provider",
        "CONDUIT_SYNC": "enable_conduit_sync",
        "DIRECTION": "dir",
        "DISPLAY_NAME": "display_name_contains",
        "END_DATE": "ending",
        "GRANULARITY": "granularity",
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "SORT": "sort",
        "START_DATE": "beginning",
        "TALLY_REPORT": "enable_tally_reporting",
        "TALLY_SYNC": "enable_tally_sync",
        "UOM": "uom",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_UOM_TYPES": Object {
        "CORES": "cores",
        "SOCKETS": "sockets",
      },
      "RHSM_API_QUERY_USAGE_TYPES": Object {
        "DEVELOPMENT": "Development/Test",
        "DISASTER": "Disaster Recovery",
        "PRODUCTION": "Production",
        "UNSPECIFIED": "",
      },
      "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
      "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
        "CLOUD_CORES": "cloud_cores",
        "CLOUD_INSTANCES": "cloud_instance_count",
        "CLOUD_SOCKETS": "cloud_sockets",
        "CORES": "cores",
        "DATE": "date",
        "HAS_INFINITE": "has_infinite_quantity",
        "HYPERVISOR_CORES": "hypervisor_cores",
        "HYPERVISOR_SOCKETS": "hypervisor_sockets",
        "PHYSICAL_CORES": "physical_cores",
        "PHYSICAL_SOCKETS": "physical_sockets",
        "SOCKETS": "sockets",
      },
      "RHSM_API_RESPONSE_DATA": "data",
      "RHSM_API_RESPONSE_ERROR_DATA": "errors",
      "RHSM_API_RESPONSE_ERROR_DATA_CODE_TYPES": Object {
        "GENERIC": "SUBSCRIPTIONS1003",
        "OPTIN": "SUBSCRIPTIONS1004",
      },
      "RHSM_API_RESPONSE_ERROR_DATA_TYPES": Object {
        "CODE": "code",
      },
      "RHSM_API_RESPONSE_INVENTORY_DATA": "data",
      "RHSM_API_RESPONSE_INVENTORY_DATA_TYPES": Object {
        "CLOUD_PROVIDER": "cloud_provider",
        "CORES": "cores",
        "CORE_HOURS": "core_hours",
        "GUESTS": "number_of_guests",
        "HARDWARE": "hardware_type",
        "ID": "insights_id",
        "INVENTORY_ID": "inventory_id",
        "LAST_SEEN": "last_seen",
        "MEASUREMENT": "measurement_type",
        "NAME": "display_name",
        "SOCKETS": "sockets",
        "SUBSCRIPTION_ID": "subscription_manager_id",
      },
      "RHSM_API_RESPONSE_INVENTORY_GUESTS_DATA_TYPES": Object {
        "ID": "insights_id",
        "LAST_SEEN": "last_seen",
        "NAME": "display_name",
        "SUBSCRIPTION_ID": "subscription_manager_id",
      },
      "RHSM_API_RESPONSE_LINKS": "links",
      "RHSM_API_RESPONSE_LINKS_TYPES": Object {
        "FIRST": "first",
        "LAST": "last",
        "NEXT": "next",
        "PREVIOUS": "previous",
      },
      "RHSM_API_RESPONSE_META": "meta",
      "RHSM_API_RESPONSE_META_TYPES": Object {
        "COUNT": "count",
        "TOTAL_CORE_HOURS": "total_core_hours",
        "TOTAL_INSTANCE_HOURS": "total_instance_hours",
      },
      "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
      "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
        "CLOUD_CORES": "cloud_cores",
        "CLOUD_INSTANCES": "cloud_instance_count",
        "CLOUD_SOCKETS": "cloud_sockets",
        "CORES": "cores",
        "CORE_HOURS": "core_hours",
        "DATE": "date",
        "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
        "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
        "HAS_DATA": "has_data",
        "HYPERVISOR_CORES": "hypervisor_cores",
        "HYPERVISOR_SOCKETS": "hypervisor_sockets",
        "INSTANCE_HOURS": "instance_hours",
        "PHYSICAL_CORES": "physical_cores",
        "PHYSICAL_SOCKETS": "physical_sockets",
        "SOCKETS": "sockets",
      },
    },
  },
  "rhsmApiTypes": Object {
    "RHSM_API_PATH_ID_TYPES": Object {
      "OPENSHIFT": "OpenShift Container Platform",
      "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
      "OPENSHIFT_METRICS": "OpenShift-metrics",
      "RHEL": "RHEL",
      "RHEL_ARM": "RHEL for ARM",
      "RHEL_COMPUTE_NODE": "RHEL Compute Node",
      "RHEL_DESKTOP": "RHEL Desktop",
      "RHEL_IBM_POWER": "RHEL for IBM Power",
      "RHEL_IBM_Z": "RHEL for IBM z",
      "RHEL_SERVER": "RHEL Server",
      "RHEL_WORKSTATION": "RHEL Workstation",
      "RHEL_X86": "RHEL for x86",
      "RHOSAK": "rhosak",
      "SATELLITE": "Satellite",
      "SATELLITE_CAPSULE": "Satellite Capsule",
      "SATELLITE_SERVER": "Satellite Server",
    },
    "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
      "DAILY": "Daily",
      "MONTHLY": "Monthly",
      "QUARTERLY": "Quarterly",
      "WEEKLY": "Weekly",
    },
    "RHSM_API_QUERY_SET_INVENTORY_GUESTS_TYPES": Object {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "UOM": "uom",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_INVENTORY_SUBSCRIPTIONS_TYPES": Object {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "UOM": "uom",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_INVENTORY_TYPES": Object {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "UOM": "uom",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_OPTIN_TYPES": Object {
      "CONDUIT_SYNC": "enable_conduit_sync",
      "TALLY_REPORT": "enable_tally_reporting",
      "TALLY_SYNC": "enable_tally_sync",
    },
    "RHSM_API_QUERY_SET_REPORT_CAPACITY_TYPES": Object {
      "BILLING_PROVIDER": "billing_provider",
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "SLA": "sla",
      "START_DATE": "beginning",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SLA_TYPES": Object {
      "NONE": "",
      "PREMIUM": "Premium",
      "SELF": "Self-Support",
      "STANDARD": "Standard",
    },
    "RHSM_API_QUERY_SORT_DIRECTION_TYPES": Object {
      "ASCENDING": "asc",
      "DESCENDING": "desc",
    },
    "RHSM_API_QUERY_SORT_TYPES": Object {
      "CORES": "cores",
      "CORE_HOURS": "core_hours",
      "HARDWARE": "hardware_type",
      "INSTANCE_HOURS": "instance_hours",
      "LAST_SEEN": "last_seen",
      "MEASUREMENT": "measurement_type",
      "NAME": "display_name",
      "SOCKETS": "sockets",
    },
    "RHSM_API_QUERY_TYPES": Object {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "CONDUIT_SYNC": "enable_conduit_sync",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "TALLY_REPORT": "enable_tally_reporting",
      "TALLY_SYNC": "enable_tally_sync",
      "UOM": "uom",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_UOM_TYPES": Object {
      "CORES": "cores",
      "SOCKETS": "sockets",
    },
    "RHSM_API_QUERY_USAGE_TYPES": Object {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
    "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
    "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
      "CLOUD_CORES": "cloud_cores",
      "CLOUD_INSTANCES": "cloud_instance_count",
      "CLOUD_SOCKETS": "cloud_sockets",
      "CORES": "cores",
      "DATE": "date",
      "HAS_INFINITE": "has_infinite_quantity",
      "HYPERVISOR_CORES": "hypervisor_cores",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "PHYSICAL_CORES": "physical_cores",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_DATA": "data",
    "RHSM_API_RESPONSE_ERROR_DATA": "errors",
    "RHSM_API_RESPONSE_ERROR_DATA_CODE_TYPES": Object {
      "GENERIC": "SUBSCRIPTIONS1003",
      "OPTIN": "SUBSCRIPTIONS1004",
    },
    "RHSM_API_RESPONSE_ERROR_DATA_TYPES": Object {
      "CODE": "code",
    },
    "RHSM_API_RESPONSE_INVENTORY_DATA": "data",
    "RHSM_API_RESPONSE_INVENTORY_DATA_TYPES": Object {
      "CLOUD_PROVIDER": "cloud_provider",
      "CORES": "cores",
      "CORE_HOURS": "core_hours",
      "GUESTS": "number_of_guests",
      "HARDWARE": "hardware_type",
      "ID": "insights_id",
      "INVENTORY_ID": "inventory_id",
      "LAST_SEEN": "last_seen",
      "MEASUREMENT": "measurement_type",
      "NAME": "display_name",
      "SOCKETS": "sockets",
      "SUBSCRIPTION_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_INVENTORY_GUESTS_DATA_TYPES": Object {
      "ID": "insights_id",
      "LAST_SEEN": "last_seen",
      "NAME": "display_name",
      "SUBSCRIPTION_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_LINKS": "links",
    "RHSM_API_RESPONSE_LINKS_TYPES": Object {
      "FIRST": "first",
      "LAST": "last",
      "NEXT": "next",
      "PREVIOUS": "previous",
    },
    "RHSM_API_RESPONSE_META": "meta",
    "RHSM_API_RESPONSE_META_TYPES": Object {
      "COUNT": "count",
      "TOTAL_CORE_HOURS": "total_core_hours",
      "TOTAL_INSTANCE_HOURS": "total_instance_hours",
    },
    "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
      "CLOUD_CORES": "cloud_cores",
      "CLOUD_INSTANCES": "cloud_instance_count",
      "CLOUD_SOCKETS": "cloud_sockets",
      "CORES": "cores",
      "CORE_HOURS": "core_hours",
      "DATE": "date",
      "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
      "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
      "HAS_DATA": "has_data",
      "HYPERVISOR_CORES": "hypervisor_cores",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "INSTANCE_HOURS": "instance_hours",
      "PHYSICAL_CORES": "physical_cores",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
  },
}
`;

exports[`ApiTypes should have specific API properties: specific types 1`] = `
Object {
  "rhsmApi": Object {
    "RHSM_API_PATH_ID_TYPES": Object {
      "OPENSHIFT": "OpenShift Container Platform",
      "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
      "OPENSHIFT_METRICS": "OpenShift-metrics",
      "RHEL": "RHEL",
      "RHEL_ARM": "RHEL for ARM",
      "RHEL_COMPUTE_NODE": "RHEL Compute Node",
      "RHEL_DESKTOP": "RHEL Desktop",
      "RHEL_IBM_POWER": "RHEL for IBM Power",
      "RHEL_IBM_Z": "RHEL for IBM z",
      "RHEL_SERVER": "RHEL Server",
      "RHEL_WORKSTATION": "RHEL Workstation",
      "RHEL_X86": "RHEL for x86",
      "RHOSAK": "rhosak",
      "SATELLITE": "Satellite",
      "SATELLITE_CAPSULE": "Satellite Capsule",
      "SATELLITE_SERVER": "Satellite Server",
    },
    "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
      "DAILY": "Daily",
      "MONTHLY": "Monthly",
      "QUARTERLY": "Quarterly",
      "WEEKLY": "Weekly",
    },
    "RHSM_API_QUERY_SET_INVENTORY_GUESTS_TYPES": Object {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "UOM": "uom",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_INVENTORY_SUBSCRIPTIONS_TYPES": Object {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "UOM": "uom",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_INVENTORY_TYPES": Object {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "UOM": "uom",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_OPTIN_TYPES": Object {
      "CONDUIT_SYNC": "enable_conduit_sync",
      "TALLY_REPORT": "enable_tally_reporting",
      "TALLY_SYNC": "enable_tally_sync",
    },
    "RHSM_API_QUERY_SET_REPORT_CAPACITY_TYPES": Object {
      "BILLING_PROVIDER": "billing_provider",
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "SLA": "sla",
      "START_DATE": "beginning",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SLA_TYPES": Object {
      "NONE": "",
      "PREMIUM": "Premium",
      "SELF": "Self-Support",
      "STANDARD": "Standard",
    },
    "RHSM_API_QUERY_SORT_DIRECTION_TYPES": Object {
      "ASCENDING": "asc",
      "DESCENDING": "desc",
    },
    "RHSM_API_QUERY_SORT_TYPES": Object {
      "CORES": "cores",
      "CORE_HOURS": "core_hours",
      "HARDWARE": "hardware_type",
      "INSTANCE_HOURS": "instance_hours",
      "LAST_SEEN": "last_seen",
      "MEASUREMENT": "measurement_type",
      "NAME": "display_name",
      "SOCKETS": "sockets",
    },
    "RHSM_API_QUERY_TYPES": Object {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "CONDUIT_SYNC": "enable_conduit_sync",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "TALLY_REPORT": "enable_tally_reporting",
      "TALLY_SYNC": "enable_tally_sync",
      "UOM": "uom",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_UOM_TYPES": Object {
      "CORES": "cores",
      "SOCKETS": "sockets",
    },
    "RHSM_API_QUERY_USAGE_TYPES": Object {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
    "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
    "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
      "CLOUD_CORES": "cloud_cores",
      "CLOUD_INSTANCES": "cloud_instance_count",
      "CLOUD_SOCKETS": "cloud_sockets",
      "CORES": "cores",
      "DATE": "date",
      "HAS_INFINITE": "has_infinite_quantity",
      "HYPERVISOR_CORES": "hypervisor_cores",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "PHYSICAL_CORES": "physical_cores",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_DATA": "data",
    "RHSM_API_RESPONSE_ERROR_DATA": "errors",
    "RHSM_API_RESPONSE_ERROR_DATA_CODE_TYPES": Object {
      "GENERIC": "SUBSCRIPTIONS1003",
      "OPTIN": "SUBSCRIPTIONS1004",
    },
    "RHSM_API_RESPONSE_ERROR_DATA_TYPES": Object {
      "CODE": "code",
    },
    "RHSM_API_RESPONSE_INVENTORY_DATA": "data",
    "RHSM_API_RESPONSE_INVENTORY_DATA_TYPES": Object {
      "CLOUD_PROVIDER": "cloud_provider",
      "CORES": "cores",
      "CORE_HOURS": "core_hours",
      "GUESTS": "number_of_guests",
      "HARDWARE": "hardware_type",
      "ID": "insights_id",
      "INVENTORY_ID": "inventory_id",
      "LAST_SEEN": "last_seen",
      "MEASUREMENT": "measurement_type",
      "NAME": "display_name",
      "SOCKETS": "sockets",
      "SUBSCRIPTION_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_INVENTORY_GUESTS_DATA_TYPES": Object {
      "ID": "insights_id",
      "LAST_SEEN": "last_seen",
      "NAME": "display_name",
      "SUBSCRIPTION_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_LINKS": "links",
    "RHSM_API_RESPONSE_LINKS_TYPES": Object {
      "FIRST": "first",
      "LAST": "last",
      "NEXT": "next",
      "PREVIOUS": "previous",
    },
    "RHSM_API_RESPONSE_META": "meta",
    "RHSM_API_RESPONSE_META_TYPES": Object {
      "COUNT": "count",
      "TOTAL_CORE_HOURS": "total_core_hours",
      "TOTAL_INSTANCE_HOURS": "total_instance_hours",
    },
    "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
      "CLOUD_CORES": "cloud_cores",
      "CLOUD_INSTANCES": "cloud_instance_count",
      "CLOUD_SOCKETS": "cloud_sockets",
      "CORES": "cores",
      "CORE_HOURS": "core_hours",
      "DATE": "date",
      "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
      "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
      "HAS_DATA": "has_data",
      "HYPERVISOR_CORES": "hypervisor_cores",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "INSTANCE_HOURS": "instance_hours",
      "PHYSICAL_CORES": "physical_cores",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
  },
}
`;
